[config] field integral coefficients for L1 sols
Including dummy coeff_a for magnet-table fixes

--- a/Config/claraPH1Magnets.config
+++ b/Config/claraPH1Magnets.config
@@ -95,9 +95,11 @@ MANUFACTURER = "Efremov Institute";
 SERIAL_NUMBER = 08;
 PV_ROOT = CLA-L01-MAG-SOL-01:;
 MAG_TYPE = SOL;
-###########Magneticlength and coefs copied from velaINJMagnet.config################
-FIELD_INTEGRAL_COEFFICIENTS = 104.285048, -43.2881185, 0.924829558, -0.0890716383, 4.26526273,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
-MAGNETIC_LENGTH = 139.50;
+;                             coeff_a             coeff_b
+;                             1, p, I, p*I, p**2; I**3, I**2, I,           1
+FIELD_INTEGRAL_COEFFICIENTS = 0, 0, 1, 0,   0,    0,    0,    0.37651102,  0.12171419;
+MAGNETIC_LENGTH = 726.91820512820505;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\SwissFEL Linac Solenoids";
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 10.0,   -10.0,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
@@ -111,9 +113,11 @@ MANUFACTURER = "Efremov Institute";
 SERIAL_NUMBER = 09;
 PV_ROOT = CLA-L01-MAG-SOL-02:;
 MAG_TYPE = SOL;
-###########Magneticlength and coefs copied from velaINJMagnet.config################
-FIELD_INTEGRAL_COEFFICIENTS = 104.285048, -43.2881185, 0.924829558, -0.0890716383, 4.26526273,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
-MAGNETIC_LENGTH = 800;
+;                             coeff_a             coeff_b
+;                             1, p, I, p*I, p**2; I**3, I**2, I,           1
+FIELD_INTEGRAL_COEFFICIENTS = 0, 0, 1, 0,   0,    0,    0,    0.37651102,  0.12171419;
+MAGNETIC_LENGTH = 726.91820512820505;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\SwissFEL Linac Solenoids";
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 10.0,   -10.0,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
@@ -220,6 +224,7 @@ DEGAUSS_VALUES = 9.9,   -9.9,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 MAG_MIN_I = -200;
 MAG_MAX_I = 200;
+MAGNET_BRANCH = DIP01;
 
 NAME = C2V-QUAD2;
 PV_ROOT = CLA-C2V-MAG-QUAD-02:;
@@ -236,6 +241,7 @@ DEGAUSS_VALUES = 9.9,   -9.9,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 MAG_MIN_I = -200;
 MAG_MAX_I = 200;
+MAGNET_BRANCH = DIP01;
 
 NAME = C2V-QUAD3;
 PV_ROOT = CLA-C2V-MAG-QUAD-03:;
@@ -252,6 +258,7 @@ DEGAUSS_VALUES = 9.9,   -9.9,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 MAG_MIN_I = -200;
 MAG_MAX_I = 200;
+MAGNET_BRANCH = DIP01;
 
 
 // hv_corrs
@@ -400,6 +407,7 @@ DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 MAG_MIN_I = -10;
 MAG_MAX_I = 10;
+MAGNET_BRANCH = DIP01;
 
 NAME = C2V-VCOR1;
 PV_ROOT = CLA-C2V-MAG-VCOR-01:;
@@ -416,6 +424,7 @@ DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 MAG_MIN_I = -10;
 MAG_MAX_I = 10;
+MAGNET_BRANCH = DIP01;
 
 
  ____ ____ ____ _____ __   ____ ___
@@ -458,5 +467,6 @@ DEGAUSS_TOLERANCE  = 0.1; ???
 MAG_SET_MAX_WAIT_TIME = 45; ???
 MAG_MIN_I = -200;
 MAG_MAX_I = 200;
+MAGNET_BRANCH = DIP01;
 
 END_OF_DATA;
