[config] coefficients for Linac1 solenoids
Added modelled coefficients to calculate Larmor angle for Linac1
solenoids.

--- a/Config/claraPH1Magnets.config
+++ b/Config/claraPH1Magnets.config
@@ -64,7 +64,7 @@ POSITION = -0.072;
 MANUFACTURER = Danfysik;
 PV_ROOT = CLA-LRG1-MAG-BSOL-01:  ;
 MAG_TYPE = BSOL;
-###########Magneticlength and coeffs copied from velaINJMagnet.config##############
+#Magneticlength and coeffs copied from velaINJMagnet.config#
 FIELD_INTEGRAL_COEFFICIENTS = 0.000449207, -1.07199E-07, 1.31132E-10, -0.029521811, -4.34196E-06, 1.8541E-08, 0.001654436, -1.89555E-06, -7.20952E-10, -1.51066E-12, -2.68258E-05, 1.648E-07,  -3.46288e-4, 0.021356715, -0.38108999, 0.0;
 MAGNETIC_LENGTH = 12.91;
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
@@ -79,9 +79,9 @@ MANUFACTURER = SEF;
 SERIAL_NUMBER = 01;
 PV_ROOT = CLA-GUN-MAG-SOL-02:;
 MAG_TYPE = SOL;
-###########Magneticlength and coefs copied from velaINJMagnet.config################
-FIELD_INTEGRAL_COEFFICIENTS = 104.285048, -43.2881185, 0.924829558, -0.0890716383, 4.26526273,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
-MAGNETIC_LENGTH = 800;
+#Magneticlength and coefs copied from velaINJMagnet.config#
+FIELD_INTEGRAL_COEFFICIENTS = 2.13556165, -0.843299065, 0.168958882, -0.0167710091, 6.56775844e-04,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
+MAGNETIC_LENGTH = 139.50;
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 7.6,   -7.38,  5.0,   -5.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
@@ -95,9 +95,9 @@ MANUFACTURER = "Efremov Institute";
 SERIAL_NUMBER = 08;
 PV_ROOT = CLA-L01-MAG-SOL-01:;
 MAG_TYPE = SOL;
-;                             coeff_a             coeff_b
-;                             1, p, I, p*I, p**2; I**3, I**2, I,           1
-FIELD_INTEGRAL_COEFFICIENTS = 0, 0, 1, 0,   0,    0,    0,    0.37651102,  0.12171419;
+;                             coeff_a for Larmor angle .................................................; coeff_b for integrated field
+;                                       I,           p*I,        p**2*I,          p**3*I,         p**4*I; I**3, I**2,             I,           1
+FIELD_INTEGRAL_COEFFICIENTS = 0.911580969, -0.0374385376, 0.00106926073, -1.64644381e-05, 1.01769629e-07,    0,    0,    0.37651102,  0.12171419;
 MAGNETIC_LENGTH = 726.91820512820505;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\SwissFEL Linac Solenoids";
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
@@ -113,9 +113,9 @@ MANUFACTURER = "Efremov Institute";
 SERIAL_NUMBER = 09;
 PV_ROOT = CLA-L01-MAG-SOL-02:;
 MAG_TYPE = SOL;
-;                             coeff_a             coeff_b
-;                             1, p, I, p*I, p**2; I**3, I**2, I,           1
-FIELD_INTEGRAL_COEFFICIENTS = 0, 0, 1, 0,   0,    0,    0,    0.37651102,  0.12171419;
+;                             coeff_a for Larmor angle .................................................; coeff_b for integrated field
+;                                       I,           p*I,        p**2*I,          p**3*I,         p**4*I; I**3, I**2,             I,           1
+FIELD_INTEGRAL_COEFFICIENTS = 0.847688880, -0.0653499119, 0.00243270133, -4.29020066e-05, 2.87019853e-07,    0,    0,    0.37651102,  0.12171419;
 MAGNETIC_LENGTH = 726.91820512820505;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\SwissFEL Linac Solenoids";
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
@@ -441,7 +441,7 @@ MAGNETIC_LENGTH = 399.216; Defined along the nominal 45° arc
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Dipoles\Type 1";
 PV_ROOT = CLA-C2V-MAG-DIP-01:;
 MAG_TYPE = DIP;
-MAG_REV_TYPE = NR;
+MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.001; ???
 NUM_DEGAUSS_STEPS = 11; ???
 DEGAUSS_VALUES  = 9.98,  -9.98,  6.0,   -6.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0; ???
@@ -459,7 +459,7 @@ MAGNETIC_LENGTH = 397.752;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Dipoles\Type 2";
 PV_ROOT = CLA-C2V-MAG-DIP-02:;
 MAG_TYPE = DIP;
-MAG_REV_TYPE = NR;
+MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.001; ???
 NUM_DEGAUSS_STEPS = 11; ???
 DEGAUSS_VALUES  = 9.98,  -9.98,  6.0,   -6.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0; ???
