--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -56,7 +56,7 @@ PV_MASK        = DBE_VALUE;
 OBJECTS_START;
 NUMBER_OF_OBJECTS = 17;
 
-NUMBER_OF_ILOCKS  = 0;  (in the old scheme: Most have 6 or 8 (but not the BSOL). Redefine before the "NAME" paramater")
+NUMBER_OF_ILOCKS  = 0;  (in the old scheme: Most have 6 or 8 (but not the BSOL). Redefine before the "NAME" parameter")
 						in the new scheme each magnet has a single RILK, provided by controls)
  ___ _____ __   ___
 / __(  _  (  ) / __)
@@ -67,11 +67,11 @@ NAME = BSOL;
 POSITION = 0.000; longitudinal position along the lattice (in metres) - used to define magnet order
 MANUFACTURER = Danfysik;
 
-As with the SOL, these FICs work a little differently. The field at the cathode is calculated using
+;As with the SOL, these FICs work a little differently. The field at the cathode is calculated using
 ;B_cath = coeff_a . [y, y², y³, x, xy, xy², x², x²y, x²y², x²y³, x³, x³y]
-where x is the BC current and y is the solenoid current
-coeff_a are the first 12 coefficients, the rest are coeff_b which translates current into integrated field.
-                             (coeff_a ......................................................................................................................................................) (coeff_b...................................)
+;where x is the BC current and y is the solenoid current
+;coeff_a are the first 12 coefficients, the rest are coeff_b which translates current into integrated field.
+;                            (coeff_a ......................................................................................................................................................) (coeff_b...................................)
 FIELD_INTEGRAL_COEFFICIENTS = 0.000449207, -1.07199E-07, 1.31132E-10, -0.029521811, -4.34196E-06, 1.8541E-08, 0.001654436, -1.89555E-06, -7.20952E-10, -1.51066E-12, -2.68258E-05, 1.648E-07,  -3.46288e-4, 0.021356715, -0.38108999, 0.0;
 MAGNETIC_LENGTH = 12.91;
 PV_ROOT = EBT-INJ-MAG-BSOL-01:  ;
@@ -95,12 +95,13 @@ MANUFACTURER = SEF;
 SERIAL_NUMBER = 02;
 POSITION = 0.197;
 
-The field integral coefficients work a little differently here. The Larmor angle is calculated using
-;theta_L = coeff_a . [1, p, I, p*I, p**2] where p is the momentum and I is the solenoid current
-These coefficients have been calculated using the rf_sol_tracking code and the calc-larmor-angle-coeffs.py script.
-coeff_a are the first 5 coefficients, the rest are coeff_b which translates current into integrated field.
-                             (coeff_a .......................................................) (coeff_b ...................................)
-FIELD_INTEGRAL_COEFFICIENTS = 104.285048, -43.2881185, 0.924829558, -0.0890716383, 4.26526273,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
+;The field integral coefficients work a little differently here. The Larmor angle is calculated using
+;theta_L = coeff_a * I . [1, p, p**2, p**3, p**4] where p is the momentum and I is the solenoid current
+;These coefficients have been calculated using the rf_sol_tracking code and the calc-larmor-angle-coeffs.py script.
+;coeff_a are the first 5 coefficients, the rest are coeff_b which translates current into integrated field.
+;                            (coeff_a ............................................................) (coeff_b ...................................)
+FIELD_INTEGRAL_COEFFICIENTS = 2.13556165, -0.843299065, 0.168958882, -0.0167710091, 6.56775844e-04,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
+;old values: FIELD_INTEGRAL_COEFFICIENTS = 104.285048, -43.2881185, 0.924829558, -0.0890716383, 4.26526273,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
 MAGNETIC_LENGTH = 139.50;
 PV_ROOT = EBT-INJ-MAG-SOL-01:;
 MAG_TYPE = SOL;
