[config] SOL/BSOL coefficients
Updated based on measurements of the actual installed positions of the
BC and the solenoid on Gun-10.

--- a/Config/claraPH1Magnets.config
+++ b/Config/claraPH1Magnets.config
@@ -65,8 +65,8 @@ MANUFACTURER = Danfysik;
 PV_ROOT = CLA-LRG1-MAG-BSOL-01:  ;
 MAG_TYPE = BSOL;
 #Magneticlength and coeffs copied from velaINJMagnet.config#
-FIELD_INTEGRAL_COEFFICIENTS = 0.000449207, -1.07199E-07, 1.31132E-10, -0.029521811, -4.34196E-06, 1.8541E-08, 0.001654436, -1.89555E-06, -7.20952E-10, -1.51066E-12, -2.68258E-05, 1.648E-07,  -3.46288e-4, 0.021356715, -0.38108999, 0.0;
-MAGNETIC_LENGTH = 12.91;
+FIELD_INTEGRAL_COEFFICIENTS = 0.000513431, -1.27695E-07, 1.61655E-10, -0.032733798, -4.29885E-06, 2.28967E-08, 0.001833327, -2.5354E-06, -1.04715E-09, -1.61177E-12, -2.94837E-05, 2.13938E-07,  -0.003957362, 0.246073139, -4.393602393, 0.0;
+MAGNETIC_LENGTH = 12.5;
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 7.6,   -7.38,  5.0,   -5.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
@@ -80,7 +80,7 @@ SERIAL_NUMBER = 01;
 PV_ROOT = CLA-GUN-MAG-SOL-02:;
 MAG_TYPE = SOL;
 #Magneticlength and coefs copied from velaINJMagnet.config#
-FIELD_INTEGRAL_COEFFICIENTS = 2.13556165, -0.843299065, 0.168958882, -0.0167710091, 6.56775844e-04,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
+FIELD_INTEGRAL_COEFFICIENTS = 2.17321571, -0.858179277, 0.172127130, -0.0171033399, 6.70371530e-04,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
 MAGNETIC_LENGTH = 139.50;
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 11;
