--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -71,9 +71,10 @@ MANUFACTURER = Danfysik;
 ;B_cath = coeff_a . [y, y², y³, x, xy, xy², x², x²y, x²y², x²y³, x³, x³y]
 ;where x is the BC current and y is the solenoid current
 ;coeff_a are the first 12 coefficients, the rest are coeff_b which translates current into integrated field.
-;                            (coeff_a ......................................................................................................................................................) (coeff_b...................................)
-FIELD_INTEGRAL_COEFFICIENTS = 0.000449207, -1.07199E-07, 1.31132E-10, -0.029521811, -4.34196E-06, 1.8541E-08, 0.001654436, -1.89555E-06, -7.20952E-10, -1.51066E-12, -2.68258E-05, 1.648E-07,  -3.46288e-4, 0.021356715, -0.38108999, 0.0;
-MAGNETIC_LENGTH = 12.91;
+;                            (coeff_a ........................................................................................................................................................) (coeff_b.....................................)
+FIELD_INTEGRAL_COEFFICIENTS = 0.000513431, -1.27695E-07, 1.61655E-10, -0.032733798, -4.29885E-06, 2.28967E-08, 0.001833327, -2.5354E-06, -1.04715E-09, -1.61177E-12, -2.94837E-05, 2.13938E-07,  -0.003957362, 0.246073139, -4.393602393, 0.0;
+;old values: FIELD_INTEGRAL_COEFFICIENTS = 0.000449207, -1.07199E-07, 1.31132E-10, -0.029521811, -4.34196E-06, 1.8541E-08, 0.001654436, -1.89555E-06, -7.20952E-10, -1.51066E-12, -2.68258E-05, 1.648E-07,  -3.46288e-4, 0.021356715, -0.38108999, 0.0;
+MAGNETIC_LENGTH = 12.5;
 PV_ROOT = EBT-INJ-MAG-BSOL-01:  ;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = BSOL;
@@ -100,7 +101,8 @@ POSITION = 0.197;
 ;These coefficients have been calculated using the rf_sol_tracking code and the calc-larmor-angle-coeffs.py script.
 ;coeff_a are the first 5 coefficients, the rest are coeff_b which translates current into integrated field.
 ;                            (coeff_a ............................................................) (coeff_b ...................................)
-FIELD_INTEGRAL_COEFFICIENTS = 2.13556165, -0.843299065, 0.168958882, -0.0167710091, 6.56775844e-04,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
+FIELD_INTEGRAL_COEFFICIENTS = 2.17321571, -0.858179277, 0.172127130, -0.0171033399, 6.70371530e-04,  -3.96026E-08, 1.71273E-05, 0.160949258, 0.0;
+;old values: FIELD_INTEGRAL_COEFFICIENTS = 2.13556165, -0.843299065, 0.168958882, -0.0167710091, 6.56775844e-04,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
 ;old values: FIELD_INTEGRAL_COEFFICIENTS = 104.285048, -43.2881185, 0.924829558, -0.0890716383, 4.26526273,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
 MAGNETIC_LENGTH = 139.50;
 PV_ROOT = EBT-INJ-MAG-SOL-01:;
