Multiple Registered Types, Quick-Fix for Magnets, LLRF, PILaser, BPMS & vacvalves

--- a/Python Modules/llrf/llrf.cbp
+++ b/Python Modules/llrf/llrf.cbp
@@ -46,6 +46,7 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Unit filename="../../Hardware/VCheader.h" />
 		<Unit filename="../../Hardware/controller.cpp" />
 		<Unit filename="../../Hardware/controller.h" />
 		<Unit filename="../../Hardware/interface.cpp" />
