--- a/Python Modules/cameraIA/cameraIA.cbp
+++ b/Python Modules/cameraIA/cameraIA.cbp
@@ -7,55 +7,78 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/cameraIA" prefix_auto="1" extension_auto="1" />
+				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\Debug\VELA_CLARA_Camera_IA_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
-					<Add option="/W3" />
-					<Add option="/DBUILD_DLL" />
-					<Add option="/Zi" />
-					<Add option="/D_DEBUG" />
 					<Add option="/MDd" />
+					<Add option="/W3" />
+					<Add option="/Zi" />
+					<Add option="/EHsc" />
+					<Add option="/DBUILD_DLL" />
+					<Add option="/D_DEBUG" />
+					<Add directory="include" />
+					<Add directory="../../Hardware" />
+					<Add directory="../../Utilities" />
+					<Add directory="../../Config" />
+					<Add directory="../../Hardware/camera" />
+					<Add directory="../../Hardware/camera/cameraIA" />
+					<Add directory="../../Structs" />
 				</Compiler>
 				<Linker>
+					<Add option="/debug" />
 					<Add option="/DEBUG" />
 					<Add option="/INCREMENTAL:NO" />
 					<Add library="user32" />
 				</Linker>
 				<ExtraCommands>
-					<Add after='mt.exe /nologo /manifest &quot;bin\Debug\cameraIA.dll.manifest&quot; /outputresource:&quot;bin\Debug\cameraIA.dll&quot;;2' />
+					<Add after='cmd /c copy /y &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/cameraIA" prefix_auto="1" extension_auto="1" />
+				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\stage\VELA_CLARA_Camera_IA_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
-					<Add option="/W3" />
-					<Add option="/DBUILD_DLL" />
-					<Add option="/Ox" />
-					<Add option="/DNDEBUG" />
 					<Add option="/MD" />
+					<Add option="/Ox" />
+					<Add option="/W3" />
+					<Add option="/EHsc" />
+					<Add option="/DBUILD_DLL" />
+					<Add option="/DNDEBUG" />
+					<Add directory="include" />
+					<Add directory="../../Hardware" />
+					<Add directory="../../Utilities" />
+					<Add directory="../../Config" />
+					<Add directory="../../Hardware/camera" />
+					<Add directory="../../Hardware/camera/cameraIA" />
+					<Add directory="../../Structs" />
 				</Compiler>
 				<Linker>
 					<Add option="/INCREMENTAL:NO" />
 					<Add library="user32" />
 				</Linker>
 				<ExtraCommands>
-					<Add after='mt.exe /nologo /manifest &quot;bin\Release\cameraIA.dll.manifest&quot; /outputresource:&quot;bin\Release\cameraIA.dll&quot;;2' />
+					<Add after='cmd /c copy /y &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Unit filename="../../Hardware/camera/cameraController.h" />
 		<Unit filename="../../Hardware/camera/cameraIA/cameraIAController.cpp" />
 		<Unit filename="../../Hardware/camera/cameraIA/cameraIAController.h" />
 		<Unit filename="../../Hardware/camera/cameraIA/cameraIAInterface.cpp" />
 		<Unit filename="../../Hardware/camera/cameraIA/cameraIAInterface.h" />
+		<Unit filename="../../Hardware/camera/cameraInterface.cpp" />
+		<Unit filename="../../Hardware/camera/cameraInterface1.cpp">
+			<Option compile="0" />
+			<Option link="0" />
+		</Unit>
 		<Unit filename="../../Hardware/controller.cpp" />
 		<Unit filename="../../Hardware/controller.h" />
 		<Unit filename="../../Hardware/interface.cpp" />
@@ -64,6 +87,8 @@
 		<Unit filename="../../Structs/structs.h" />
 		<Unit filename="../../Utilities/baseObject.cpp" />
 		<Unit filename="../../Utilities/baseObject.h" />
+		<Unit filename="../../Utilities/cameraIAConfigReader.cpp" />
+		<Unit filename="../../Utilities/cameraIAConfigReader.h" />
 		<Unit filename="../../Utilities/configDefinitions.h" />
 		<Unit filename="../../Utilities/configReader.cpp" />
 		<Unit filename="../../Utilities/configReader.h" />
