Revert "Updates to scope, bpm, vac valve, and screens"
This reverts commit 430139eb5c6e41c71ac937dec91e100943e3d6b5.

--- a/Python Modules/bpms/bpms.cbp
+++ b/Python Modules/bpms/bpms.cbp
@@ -29,6 +29,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="/debug" />
+					<Add option="/DEBUG" />
 					<Add option="/INCREMENTAL:NO" />
 					<Add library="user32" />
 				</Linker>
@@ -66,7 +67,6 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
-		<Unit filename="../../Hardware/VCheader.h" />
 		<Unit filename="../../Hardware/beamPositionMonitor/beamPositionMonitorController.cpp" />
 		<Unit filename="../../Hardware/beamPositionMonitor/beamPositionMonitorController.h" />
 		<Unit filename="../../Hardware/beamPositionMonitor/beamPositionMonitorInterface.cpp" />
