--- a/Python Modules/cameraIA/cameraIA.cbp
+++ b/Python Modules/cameraIA/cameraIA.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\Debug\VELA_CLARA_Camera_IA_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\Debug\VELA_CLARA_Camera_IA_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -30,7 +30,6 @@
 				</Compiler>
 				<Linker>
 					<Add option="/debug" />
-					<Add option="/DEBUG" />
 					<Add option="/INCREMENTAL:NO" />
 					<Add library="user32" />
 				</Linker>
@@ -39,7 +38,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\stage\VELA_CLARA_Camera_IA_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_Camera_IA_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -75,10 +74,6 @@
 		<Unit filename="../../Hardware/camera/cameraIA/cameraIAInterface.cpp" />
 		<Unit filename="../../Hardware/camera/cameraIA/cameraIAInterface.h" />
 		<Unit filename="../../Hardware/camera/cameraInterface.cpp" />
-		<Unit filename="../../Hardware/camera/cameraInterface1.cpp">
-			<Option compile="0" />
-			<Option link="0" />
-		</Unit>
 		<Unit filename="../../Hardware/controller.cpp" />
 		<Unit filename="../../Hardware/controller.h" />
 		<Unit filename="../../Hardware/interface.cpp" />
@@ -93,9 +88,15 @@
 		<Unit filename="../../Utilities/configReader.cpp" />
 		<Unit filename="../../Utilities/configReader.h" />
 		<Unit filename="include/VCcameraIA.h" />
+		<Unit filename="include/editor.h" />
+		<Unit filename="include/fitter.h" />
+		<Unit filename="include/offlineImageAnalyser.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="main.h" />
 		<Unit filename="src/VCcameraIA.cpp" />
+		<Unit filename="src/editor.cpp" />
+		<Unit filename="src/fitter.cpp" />
+		<Unit filename="src/offlineImageAnalyser.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
