--- a/Python Modules/img/img.cbp
+++ b/Python Modules/img/img.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/img" prefix_auto="1" extension_auto="1" />
+				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\Debug\VELA_CLARA_IMG_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -30,18 +30,36 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/img" prefix_auto="1" extension_auto="1" />
+				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\stage\VELA_CLARA_IMG_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
+					<Add option="/MD" />
+					<Add option="/Ox" />
 					<Add option="/W3" />
 					<Add option="/DBUILD_DLL" />
-					<Add option="/Ox" />
 					<Add option="/DNDEBUG" />
-					<Add option="/MD" />
+					<Add directory="include" />
+					<Add directory="../../Hardware" />
+					<Add directory="../../Structs" />
+					<Add directory="../../Utilities" />
+					<Add directory="../../Hardware/beamPositionMonitor" />
+					<Add directory="../../Hardware/camera" />
+					<Add directory="../../Hardware/gun_mod" />
+					<Add directory="../../Hardware/gun_prot" />
+					<Add directory="../../Hardware/invertedMagnetronGauge" />
+					<Add directory="../../Hardware/l01_mod" />
+					<Add directory="../../Hardware/llrf" />
+					<Add directory="../../magnet" />
+					<Add directory="../../Hardware/pilaser" />
+					<Add directory="../../Hardware/RFGun" />
+					<Add directory="../../Hardware/scope" />
+					<Add directory="../../Hardware/shutter" />
+					<Add directory="../../Hardware/vacuumValve" />
+					<Add directory="../../Hardware/vela_cam" />
 				</Compiler>
 				<Linker>
 					<Add option="/INCREMENTAL:NO" />
@@ -52,8 +70,28 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Unit filename="../../Hardware/VCheader.h" />
+		<Unit filename="../../Hardware/controller.cpp" />
+		<Unit filename="../../Hardware/controller.h" />
+		<Unit filename="../../Hardware/interface.cpp" />
+		<Unit filename="../../Hardware/interface.h" />
+		<Unit filename="../../Hardware/invertedMagnetronGauge/invertedMagnetronGaugeController.cpp" />
+		<Unit filename="../../Hardware/invertedMagnetronGauge/invertedMagnetronGaugeController.h" />
+		<Unit filename="../../Hardware/invertedMagnetronGauge/invertedMagnetronGaugeInterface.cpp" />
+		<Unit filename="../../Hardware/invertedMagnetronGauge/invertedMagnetronGaugeInterface.h" />
+		<Unit filename="../../Structs/invertedMagnetronGaugeStructs.h" />
+		<Unit filename="../../Structs/structs.h" />
+		<Unit filename="../../Utilities/baseObject.cpp" />
+		<Unit filename="../../Utilities/baseObject.h" />
+		<Unit filename="../../Utilities/configDefinitions.h" />
+		<Unit filename="../../Utilities/configReader.cpp" />
+		<Unit filename="../../Utilities/configReader.h" />
+		<Unit filename="../../Utilities/invertedMagnetronGaugeConfigReader.cpp" />
+		<Unit filename="../../Utilities/invertedMagnetronGaugeConfigReader.h" />
+		<Unit filename="include/VCimg.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="main.h" />
+		<Unit filename="src/VCimg.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
