--- a/Python Modules/scopes/scopes.cbp
+++ b/Python Modules/scopes/scopes.cbp
@@ -68,6 +68,7 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Unit filename="../../Hardware/VCheader.h" />
 		<Unit filename="../../Hardware/controller.cpp" />
 		<Unit filename="../../Hardware/controller.h" />
 		<Unit filename="../../Hardware/interface.cpp" />
