--- a/Python Modules/bpms/bpms.cbp
+++ b/Python Modules/bpms/bpms.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\stage\VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -29,7 +29,6 @@
 				</Compiler>
 				<Linker>
 					<Add option="/debug" />
-					<Add option="/DEBUG" />
 					<Add option="/INCREMENTAL:NO" />
 					<Add library="user32" />
 				</Linker>
@@ -38,7 +37,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\stage\VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -67,6 +66,7 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Unit filename="../../Hardware/VCheader.h" />
 		<Unit filename="../../Hardware/beamPositionMonitor/beamPositionMonitorController.cpp" />
 		<Unit filename="../../Hardware/beamPositionMonitor/beamPositionMonitorController.h" />
 		<Unit filename="../../Hardware/beamPositionMonitor/beamPositionMonitorInterface.cpp" />
