--- a/Python Modules/bpms/bpms.cbp
+++ b/Python Modules/bpms/bpms.cbp
@@ -28,12 +28,13 @@
 					<Add directory="../../Utilities" />
 				</Compiler>
 				<Linker>
+					<Add option="/DEBUG" />
 					<Add option="/debug" />
 					<Add option="/INCREMENTAL:NO" />
 					<Add library="user32" />
 				</Linker>
 				<ExtraCommands>
-					<Add after='cmd /c copy /y &quot;(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
+					<Add after='cmd /c copy /y &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
