[bpms] updated to follow new structure

--- a/Python Modules/scopes/scopes.cbp
+++ b/Python Modules/scopes/scopes.cbp
@@ -68,6 +68,8 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Unit filename="../../Hardware/VCbase.cpp" />
+		<Unit filename="../../Hardware/VCbase.h" />
 		<Unit filename="../../Hardware/VCheader.h" />
 		<Unit filename="../../Hardware/controller.cpp" />
 		<Unit filename="../../Hardware/controller.h" />
