--- a/Python Modules/magnets/magnetPYD.cbp
+++ b/Python Modules/magnets/magnetPYD.cbp
@@ -73,6 +73,7 @@
 					<Add directory="../../Hardware/invertedMagnetronGauge" />
 					<Add directory="../../Hardware/shutter" />
 					<Add directory="../../Hardware/pilaser" />
+					<Add directory="../../Structs/magnets" />
 				</Compiler>
 				<Linker>
 					<Add option="/INCREMENTAL:NO" />
@@ -94,8 +95,8 @@
 		<Unit filename="../../Hardware/magnet/magnetController.h" />
 		<Unit filename="../../Hardware/magnet/magnetInterface.cpp" />
 		<Unit filename="../../Hardware/magnet/magnetInterface.h" />
-		<Unit filename="../../Structs/magnetStructs.cpp" />
-		<Unit filename="../../Structs/magnetStructs.h" />
+		<Unit filename="../../Structs/magnets/magnetStructs.cpp" />
+		<Unit filename="../../Structs/magnets/magnetStructs.h" />
 		<Unit filename="../../Structs/structs.h" />
 		<Unit filename="../../Utilities/baseObject.cpp" />
 		<Unit filename="../../Utilities/baseObject.h" />
