--- a/Python Modules/cameraDAQ/cameraDAQ.cbp
+++ b/Python Modules/cameraDAQ/cameraDAQ.cbp
@@ -68,6 +68,9 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Unit filename="../../Hardware/VCbase.cpp" />
+		<Unit filename="../../Hardware/VCbase.h" />
+		<Unit filename="../../Hardware/VCheader.h" />
 		<Unit filename="../../Hardware/camera/cameraDAQ/cameraDAQController.cpp" />
 		<Unit filename="../../Hardware/camera/cameraDAQ/cameraDAQController.h" />
 		<Unit filename="../../Hardware/camera/cameraDAQ/cameraDAQInterface.cpp" />
