gun_mod updated to include RF_ON

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@
 ##########
 *.exp
 *.layout
+*.save-failed
+*.obj
+*.obj
+Python Modules/magnets/obj/Release/Hardware/interface.obj
+*.save-failed
+*.save-failed
